--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <div id="cacheHaut"></div>
     <div id="bagniere">    
         <section class="container">
-            <section class="col1"><img src="Image1.jpg" style="width: 230px; height: 50px; left: 0px"></section>
+            <section class="col1"><img src="image1.jpg" style="width: 230px; height: 50px; left: 0px"></section>
             <section class="col2"></section>
             <section class="col3">   <div id="timer">0:40:00</div>    </section>
         </section>
     </div>
     <div id="sectionImage">
-        <img src="Image2b.jpg" style="width: 99%; height: 300px; left: 0px">
+        <img src="image2b.jpg" style="width: 99%; height: 300px; left: 0px">
     </div>
     <div id="sectionImage">
         Vivez l'<b>Expérience Nicomatic</b><br> Mettez-vous dans la peau d'un Ingénieur
