refonte page principale

--- a/index.html
+++ b/index.html
@@ -21,18 +21,36 @@
         </section>
     </div>
     <div id="sectionImage">
-        <img src="image2b.jpg" style="width: 99%; height: 300px; left: 0px">
+        <img src="image2b.jpg" style="width: 99%; height: 700px; left: 0px">
     </div>
     <div id="sectionImage">
-        Vivez l'<b>Expérience Nicomatic</b><br> Mettez-vous dans la peau d'un Ingénieur
-        <br><p>Choisissez un scénario !</p>
+        <p></p>Vivez l'<b>Expérience Nicomatic</b><br> Mettez-vous dans la peau d'un Ingénieur
+        
         <!-- <section class="col1">
             <img src="Image2b.jpg" style="width: 600px; height: 300px; left: 0px">
             <br><br>
         </section> -->
-        <input type="button" value="Scénario 1 blabla" />
+        <br><br><br><br><br><br><br><br><br>
+        Choisissez un scénario !
+        <br>
+        <!-- <p></p> -->
+        <button class="favorite styled" type="button">Air Conditionné</button>
+        <button class="favorite styled" type="button">xxxxxxxx</button>
+        <button class="favorite styled" type="button">yyyyyyyy</button>
+        <button class="favorite styled" type="button">zzzzzzzz</button>
     </div>
-    
+    <div id="consigne">
+        <br><p>Scénario 1. Réaliser un module "Air Conditionné" avec
+        <br>a. Un boitier Cockpit, panel au format 2U contenant : 
+        <br>- Une fonction avec sélecteur rotatif pour régler la vitesse de ventillation cabine, 5 vitesses et position OFF
+        <br>- Une fonction avec sélecteur rotatif pour régler la vitesse de ventillation cockpit, 5 vitesses et position OFF
+        <br>- Une fonction avec sélecteur rotatif pour sélectionner la source de l'air conditionné, 5 vitesses et position OFF
+        <br>- Un bouton poussoir bistrable pour ouvrir ou fermer les clapets avec retour lumineux intégré
+        <br>b. Les cartes électroniques internes au boitier gérant les fonctions
+        <br>c. Les harnais à base de connecteurs XX points pour relier la face avant à l'électronique internet
+        <br>d. Un connecteur d'interface client de XX broches ML38999
+        </p>
+    </div>
 
     <script type="text/javascript" src="main.js"></script>
     <!-- <script type="text/javascript" src="hover.js"></script> -->
