--- a/index.html
+++ b/index.html
@@ -1,54 +1,61 @@
-<!DOCTYPE HTML>
-<!-- <html xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882"> -->
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Bus Tour</title>
-    <script type="text/javascript" src="https://static.sketchfab.com/api/sketchfab-viewer-1.12.1.js"></script>
-    <script type="text/javascript" src="AnimationControls.js"></script>
-    <link rel="stylesheet" href="styles.css" media="screen" title="no title">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<body>
-    <div><iframe src="" id="api-frame"></iframe> </div>
-    <div id="cacheHaut"></div>
-    <div id="bagniere">    
-        <section class="container">
-            <section class="col1"><img src="image1.jpg" style="width: 230px; height: 50px; left: 0px"></section>
-            <section class="col2"></section>
-            <section class="col3">   <div id="timer">0:40:00</div>    </section>
-        </section>
-    </div>
-    <div id="sectionImage">
-        <img src="image2b.jpg" style="width: 99%; height: 700px; left: 0px">
-    </div>
-    <div id="sectionImage">
-        <p></p>Vivez l'<b>Expérience Nicomatic</b><br> Mettez-vous dans la peau d'un Ingénieur
-        <br><br><br><br><br><br><br><br><br>
-        Choisissez un scénario !
-        <br>
-        <!-- <p></p> -->
-        <button class="favorite styled" type="button">Air Conditionné</button>
-        <button class="favorite styled" type="button">xxxxxxxx</button>
-        <button class="favorite styled" type="button">yyyyyyyy</button>
-        <button class="favorite styled" type="button">zzzzzzzz</button>
-    </div>
-    <div id="consigne">
-        <br><p>Scénario 1. Réaliser un module "Air Conditionné" avec
-        <br>a. Un boitier Cockpit, panel au format 2U contenant : 
-        <br>- Une fonction avec sélecteur rotatif pour régler la vitesse de ventillation cabine, 5 vitesses et position OFF
-        <br>- Une fonction avec sélecteur rotatif pour régler la vitesse de ventillation cockpit, 5 vitesses et position OFF
-        <br>- Une fonction avec sélecteur rotatif pour sélectionner la source de l'air conditionné, 5 vitesses et position OFF
-        <br>- Un bouton poussoir bistrable pour ouvrir ou fermer les clapets avec retour lumineux intégré
-        <br>b. Les cartes électroniques internes au boitier gérant les fonctions
-        <br>c. Les harnais à base de connecteurs XX points pour relier la face avant à l'électronique internet
-        <br>d. Un connecteur d'interface client de XX broches ML38999
-        </p>
-    </div>
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nicomatic Experience</title>
+    <link rel="stylesheet" href="./assets/styles/styles.css" />
+  </head>
+  <body>
+    <header>
+      <div class="logo">
+        <img
+          src="./assets/img/NicomaticGroup_Logo_Horizontal_White 1.png"
+          alt="Nicomatic Group"
+        />
+      </div>
+      <div class="language-switcher">
+        <img src="./assets/img/FrenchFlag.jpg" alt="Français" />
+        <span>Français</span>
+      </div>
+    </header>
 
-    <script type="text/javascript" src="main.js"></script>
-    <!-- <script type="text/javascript" src="hover.js"></script> -->
-    <script type="text/javascript" src="functions.js"></script>
-</body>
+    <section class="hero">
+      <img
+        src="./assets/img/laurent-perren-S3xxiedz0hE-unsplash 1.jpg"
+        alt="Cockpit d'avion"
+        class="hero-image"
+      />
+      <div class="hero-text">
+        <h1>
+          Vivez l'<span>Expérience Nicomatic</span>,<br />mettez vous dans la
+          peau d’un Ingénieur
+        </h1>
+      </div>
+    </section>
+
+    <section class="scenarios">
+      <div class="scenario">
+        <a href="scenario.html?scenario=1">
+          <h2>SCÉNARIO 1</h2>
+            <!-- Réaliser le pilotage d’un équipement embarqué pour gérer l’air conditionné -->
+            <p>Réalisez un équipement embarqué qui gère une balise</p>
+        </a>
+      </div>
+      <div class="scenario">
+        <a href="scenario.html?scenario=2">
+          <h2>SCÉNARIO 2</h2>
+          <!-- <p>Réaliser le pilotage d’un équipement embarqué pour gérer l’allumage, le standby ou l’extinction d'une balise</p> -->
+          <p>Réalisez un équipement embarqué qui gère un autre équipement embarqué</p>
+        </a>
+      </div>
+      <div class="scenario">
+        <a href="scenario.html?scenario=3">
+          <h2>SCÉNARIO 3</h2>
+          <!-- <p>Réaliser le pilotage d’un équipement embarqué pour gérer l’allumage ou l’extinction d’un autre équipement embarqué</p> -->
+          <p>Réalisez un équipement embarqué qui gère l’air conditionné</p>
+        </a>
+      </div>
+    </section>
+  </body>
 </html>
