modif texte "concevez" et des annotations

--- a/scenario.html
+++ b/scenario.html
@@ -94,7 +94,7 @@
 
     <div class="mission-bar">
       <div class="mission-title">
-        <span>VOTRE MISSION</span> | Réaliser le pilotage d’un équipement embarqué avec les fonctions décrites ci-dessous
+        <span>VOTRE MISSION</span> | Concevez le pilotage d’un équipement embarqué avec les fonctions décrites ci-dessous
         <br>Les boutons d'aide à droite vous aideront à accomplir votre mission
       </div>
       <div class="right-icons">
