--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
         <a href="scenario.html?scenario=1">
           <h2>SCÉNARIO 1</h2>
             <!-- Réaliser le pilotage d’un équipement embarqué pour gérer l’air conditionné -->
-            <p>Réalisez un équipement embarqué qui gère une balise</p>
+            <p>Concevez un équipement embarqué qui gère une balise</p>
         </a>
       </div>
       <div class="scenario">
         <a href="scenario.html?scenario=2">
           <h2>SCÉNARIO 2</h2>
           <!-- <p>Réaliser le pilotage d’un équipement embarqué pour gérer l’allumage, le standby ou l’extinction d'une balise</p> -->
-          <p>Réalisez un équipement embarqué qui gère un autre équipement embarqué</p>
+          <p>Concevez un équipement embarqué qui gère un autre équipement embarqué</p>
         </a>
       </div>
       <div class="scenario">
         <a href="scenario.html?scenario=3">
           <h2>SCÉNARIO 3</h2>
           <!-- <p>Réaliser le pilotage d’un équipement embarqué pour gérer l’allumage ou l’extinction d’un autre équipement embarqué</p> -->
-          <p>Réalisez un équipement embarqué qui gère l’air conditionné</p>
+          <p>Concevez un équipement embarqué qui gère l’air conditionné</p>
         </a>
       </div>
     </section>
