bascul en pages "Solutions"

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nicomatic Experience</title>
+    <title>Nicomatic Experiment</title>
     <link rel="stylesheet" href="./assets/styles/styles.css" />
   </head>
   <body>
@@ -14,10 +14,7 @@
           alt="Nicomatic Group"
         />
       </div>
-      <div class="language-switcher">
-        <img src="./assets/img/FrenchFlag.jpg" alt="Français" />
-        <span>Français</span>
-      </div>
+
     </header>
 
     <section class="hero">
@@ -28,32 +25,30 @@
       />
       <div class="hero-text">
         <h1>
-          Vivez l'<span>Expérience Nicomatic</span>,<br />mettez vous dans la
-          peau d’un Ingénieur
+          Discover<span> Nicomatic Solutions </span>
         </h1>
+
+        
       </div>
     </section>
 
     <section class="scenarios">
       <div class="scenario">
-        <a href="scenario.html?scenario=1">
-          <h2>SCÉNARIO 1</h2>
-            <!-- Réaliser le pilotage d’un équipement embarqué pour gérer l’air conditionné -->
-            <p>Concevez un équipement embarqué qui gère une balise</p>
+        <a href="S1.html?scenario=1en">
+          <h2>Scenario 1</h2>
+          <p>Circular connnector & Backshell, CMM harness</p>
         </a>
       </div>
       <div class="scenario">
-        <a href="scenario.html?scenario=2">
-          <h2>SCÉNARIO 2</h2>
-          <!-- <p>Réaliser le pilotage d’un équipement embarqué pour gérer l’allumage, le standby ou l’extinction d'une balise</p> -->
-          <p>Concevez un équipement embarqué qui gère un autre équipement embarqué</p>
+        <a href="S2.html?scenario=2en">
+          <h2>Scenario 2</h2>
+          <p>DMM sealed connnector & Backshell, CMM harnesses</p>
         </a>
       </div>
       <div class="scenario">
-        <a href="scenario.html?scenario=3">
-          <h2>SCÉNARIO 3</h2>
-          <!-- <p>Réaliser le pilotage d’un équipement embarqué pour gérer l’allumage ou l’extinction d’un autre équipement embarqué</p> -->
-          <p>Concevez un équipement embarqué qui gère l’air conditionné</p>
+        <a href="S3.html?scenario=3en">
+          <h2>Scenario 3</h2>
+          <p>Optimus sealed connector, CMM harnesses</p>
         </a>
       </div>
     </section>
