chgt nom: solution

--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
     <section class="scenarios">
       <div class="scenario">
         <a href="S1.html?scenario=1en">
-          <h2>Scenario 1</h2>
+          <h2>Solution 1</h2>
           <p>Circular connnector & Backshell, CMM harness</p>
         </a>
       </div>
       <div class="scenario">
         <a href="S2.html?scenario=2en">
-          <h2>Scenario 2</h2>
+          <h2>Solution 2</h2>
           <p>DMM sealed connnector & Backshell, CMM harnesses</p>
         </a>
       </div>
       <div class="scenario">
         <a href="S3.html?scenario=3en">
-          <h2>Scenario 3</h2>
+          <h2>Solution 3</h2>
           <p>Optimus sealed connector, CMM harnesses</p>
         </a>
       </div>
